add initial yung mods

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -47,6 +47,18 @@
                         <id>crystallib</id>
                         <phase>generate-sources</phase>
                     </execution>
+                    <execution>
+                        <id>when-dungeons-arise</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>cloth-config</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>better-strongholds</id>
+                        <phase>generate-sources</phase>
+                    </execution>
 
 	            <!-- TODO(rremer) update these 
                     <execution>
