--- a/server/pom.xml
+++ b/server/pom.xml
@@ -83,6 +83,22 @@
                         <id>crystallib</id>
                         <phase>generate-sources</phase>
                     </execution>
+                    <execution>
+                        <id>when-dungeons-arise</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>cloth-config</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>yungs-api</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>better-strongholds</id>
+                        <phase>generate-sources</phase>
+                    </execution>
 
                     <!-- TODO(rremer) update these
                     <execution>
