--- a/client/pom.xml
+++ b/client/pom.xml
@@ -55,6 +55,14 @@
                         <id>cloth-config</id>
                         <phase>generate-sources</phase>
                     </execution>
+                    <execution>
+                        <id>just-enough-items</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>just-enough-resources</id>
+                        <phase>generate-sources</phase>
+                    </execution>
 
 	            <!-- TODO(rremer) update these 
                     <execution>
