--- a/client/pom.xml
+++ b/client/pom.xml
@@ -63,6 +63,10 @@
                         <id>just-enough-resources</id>
                         <phase>generate-sources</phase>
                     </execution>
+                    <execution>
+                        <id>decorative-blocks</id>
+                        <phase>generate-sources</phase>
+                    </execution>
 
 	            <!-- TODO(rremer) update these 
                     <execution>
