--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.github.rremer</groupId>
         <artifactId>minecraft-modpack-rosecake</artifactId>
-        <version>1.18.1-3-SNAPSHOT</version>
+        <version>1.20.4-1</version>
     </parent>
 
     <groupId>com.github.rremer</groupId>
     <artifactId>minecraft-modpack-rosecake-client</artifactId>
-    <version>1.18.1-3-SNAPSHOT</version>
+    <version>1.20.4-1</version>
     <packaging>jar</packaging>
 
     <name>Minecraft Modpack Rosecake Client</name>
