--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.rremer</groupId>
     <artifactId>minecraft-modpack-rosecake</artifactId>
-    <version>1.18.1-3-SNAPSHOT</version>
+    <version>1.20.4-1</version>
     <packaging>pom</packaging>
 
     <name>Minecraft Modpack Rosecake</name>
