--- a/datapack-gamerules/pom.xml
+++ b/datapack-gamerules/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.github.rremer</groupId>
         <artifactId>minecraft-modpack-rosecake</artifactId>
-        <version>1.20.4-1</version>
+        <version>1.20.4-1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.github.rremer</groupId>
     <artifactId>minecraft-modpack-rosecake-datapack-gamerules</artifactId>
-    <version>1.20.4-1</version>
+    <version>1.20.4-1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Minecraft Modpack Rosecake Gamerules Datapack</name>
