--- a/image/pom.xml
+++ b/image/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.github.rremer</groupId>
         <artifactId>minecraft-modpack-rosecake</artifactId>
-        <version>1.20.4-1</version>
+        <version>1.20.4-1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.github.rremer</groupId>
     <artifactId>minecraft-modpack-rosecake-image</artifactId>
-    <version>1.20.4-1</version>
+    <version>1.20.4-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Minecraft Modpack Rosecake Image</name>
