--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.rremer</groupId>
     <artifactId>minecraft-modpack-rosecake</artifactId>
-    <version>1.20.4-1</version>
+    <version>1.20.4-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Minecraft Modpack Rosecake</name>
@@ -382,8 +382,6 @@
                                 <outputDirectory>${url.mods.target}</outputDirectory>
                             </configuration>
                         </execution>
-
-                        <!-- TODO(rremer) update these -->
                         <execution>
                             <id>shaderpacks-complementary</id>
                             <goals>
