--- a/client/pom.xml
+++ b/client/pom.xml
@@ -52,6 +52,18 @@
                         <phase>generate-sources</phase>
                     </execution>
                     <execution>
+                        <id>biomes-o-plenty</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>glitchcore</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>terrablender</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
                         <id>just-enough-items</id>
                         <phase>generate-sources</phase>
                     </execution>
